--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-thelma",
   "version": "0.0.0",
-  "description": "Yeoman generator",
+  "description": "Yeoman generator for Thelma web components",
   "license": "MIT",
   "main": "app/index.js",
   "repository": "nishacodes/generator-thelma",
@@ -20,7 +20,10 @@
     "app"
   ],
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+    "thelma",
+    "components",
+    "lenses"
   ],
   "dependencies": {
     "yeoman-generator": "^0.18.0",
