--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Yeoman generator for Thelma web components",
   "license": "MIT",
   "main": "app/index.js",
-  "repository": "nishacodes/generator-thelma",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/lenses/generator-thelma.git"
+    },
   "author": {
     "name": "Nisha Batra",
     "email": "",
