--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "generator-thelma",
+  "name": "generator-lenses",
   "version": "0.0.4",
-  "description": "Yeoman generator for Thelma web components",
+  "description": "Yeoman generator for Lenses web components",
   "license": "MIT",
   "main": "app/index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/lenses/generator-thelma.git"
+    "url": "git://github.com/lenses/generator-lenses.git"
   },
   "author": {
-    "name": "Thelma Team",
-    "email": "",
-    "url": "https://github.com/thelmanews"
+    "name": "Lenses Team",
+    "email": "info@makelenses.com",
+    "url": "https://github.com/lenses"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -21,8 +21,9 @@
   },
   "keywords": [
     "yeoman-generator",
-    "thelma",
-    "components",
+    "data visualization",
+    "web components",
+    "polymer",
     "lenses"
   ],
   "dependencies": {
